force-app/main/default/objects/Zilliant_Approval_Variables__c/Zilliant_Approval_Variables__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Zilliant Approval Variables</label>
</CustomObject>