force-app/main/default/objects/Zilliant_Approval_Variables__c/fields/Agreement_Line_Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Line_Score_Threshold__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Number which, if the ALI score is below then it will need to be manually approved</description>
    <inlineHelpText>Number which, if the ALI score is below then it will need to be manually approved</inlineHelpText>
    <label>Agreement Line Score Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>