force-app/main/default/objects/Zilliant_Approval_Variables__c/fields/Agreement_Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Score_Threshold__c</fullName>
    <defaultValue>30</defaultValue>
    <description># of the score that, if above, an ALI will be automatically approved.</description>
    <inlineHelpText># of the score that, if above, an ALI will be automatically approved.</inlineHelpText>
    <label>Agreement Score Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>