force-app/main/default/objects/Zilliant_Approval_Variables__c/fields/Approval_Reminder_Pricing_Team_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reminder_Pricing_Team_User_ID__c</fullName>
    <description>ID of the User to send emails to as reminders of GM Owned Agreement Line Items in need of approval.</description>
    <label>Approval Reminder Pricing Team User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>