force-app/main/default/objects/Zilliant_Approval_Variables__c/fields/GM_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>GM_Timeframe__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Created by BW to track the GM timeframe</description>
    <label>GM Timeframe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>