force-app/main/default/objects/Zilliant_Approval_Variables__c/fields/SM_Timeframe_2__c.field-meta.xml
<CustomField>
    <fullName>SM_Timeframe_2__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Created by BW to track the SM timeframe for approvals</description>
    <label>SM Timeframe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>